Putting the page elements together...

--- a/pages/web.html
+++ b/pages/web.html
@@ -9,10 +9,10 @@
   <meta name="author" content="Cordell Bonnieux">
 
   <link rel="icon" href="../assets/favicon.ico">
-  <link rel="stylesheet" href="../assets/styles.css">
-  <script src="../assets/scripts.js" defer></script>
+  <link rel="stylesheet" href="../assets/style.css">
+  <script src="../assets/script.js" defer></script>
 </head>
-<body>
+<body id="web">
   <!-- your content here... -->
 </body>
 </html>
