Replaced several shitty css lines with good flexboxes, and generally improved css layout.

--- a/pages/web.html
+++ b/pages/web.html
@@ -13,6 +13,9 @@
   <script src="../assets/script.js" defer></script>
 </head>
 <body id="web">
-  <!-- your content here... -->
+    <header></header>
+    <main>
+    </main>
+    <footer></footer>
 </body>
 </html>
