Added some graphic design projects to the graphics page and polished it off.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>A Basic HTML5 Template</title>
+  <title>Cordell Bonnieux's Resume</title>
   <meta name="description" content="Cordell's resume home page">
   <meta name="author" content="Cordell Bonnieux">
 
