--- a/pages/web.html
+++ b/pages/web.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>A Basic HTML5 Template</title>
+  <title>Web Apps</title>
   <meta name="description" content="Web applications">
   <meta name="author" content="Cordell Bonnieux">
 
