--- a/index.html
+++ b/index.html
@@ -16,16 +16,13 @@
     <header></header>
     <main>
         <section class="text">
-            <h2>Biography</h1>
+            <h2>Biography</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute 
-                    irure dolor in reprehenderit in voluptate velit esse cillum 
-                    dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
-                    non proident, sunt in culpa qui officia deserunt mollit anim id est 
-                    laborum.
+                    Hello, my name is Cordell Bonnieux, I am a Web Developer residing in Vancouver BC.
+                    I am currently a student at Langara College, taking the Associates of Computer Science program.
+                    I have been making websites since 2002, and professionally since 2014. I have also worked in the past
+                    as a graphic designer, for both web and print. My plans after I graduate are to transfer to university
+                    and complete a bachelor of computer science degree.
                 </p>
         </section>
         <section>
