Adding extra content to index.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
             <img src="img/avatar.png" alt="Cordell's headshot" id="avatar">
         </section>
     </main>
+    <div id="secondary">
+        <section class="text">
+            <h3>Skills</h3>
+            <ul>
+                <li>JavaScript - Node.js, React.js, Babylon.js, Phaser.js, Webpack, NPM, Parcel</li>
+                <li>PHP - Drupal, Wordpress, Magento</li>
+                <li>Java - JavaFX, Java Server</li>
+                <li>C# - Unity, .NET</li>
+                <li>HTML5 / CSS - SASS</li>
+                <li>Python - Pymongo</li>
+                <li>MYSQL / NoSQL Databases</li>
+                <li>Adobe Suite - Illustrator, Photoshop, After Effects</li>
+            </ul>
+        </section>
+    </div>
     <footer></footer>
 </body>
 </html>
