Added contact info to header.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
                 <li>Adobe Suite - Illustrator, Photoshop, After Effects</li>
             </ul>
         </section>
+        <section class="text">
+            <h3>Hobbies</h3>
+            <ul>
+                <li>Playing Music</li>
+                <li>Collecting Records</li>
+                <li>video Games</li>
+                <li>Concerts and Festivals</li>
+                <li>Programming</li>
+                <li>Drawing/Art</li>
+            </ul>
+        </section>
     </div>
     <footer></footer>
 </body>
