Added table to index.

--- a/index.html
+++ b/index.html
@@ -32,23 +32,134 @@
     <div id="secondary">
         <section class="text">
             <h3>Skills</h3>
-            <ul>
-                <li>JavaScript - Node.js, React.js, Babylon.js, Phaser.js, Webpack, NPM, Parcel</li>
-                <li>PHP - Drupal, Wordpress, Magento</li>
-                <li>Java - JavaFX, Java Server</li>
-                <li>C# - Unity, .NET</li>
-                <li>HTML5 / CSS - SASS</li>
-                <li>Python - Pymongo</li>
-                <li>MYSQL / NoSQL Databases</li>
-                <li>Adobe Suite - Illustrator, Photoshop, After Effects</li>
-            </ul>
+            <table>
+                <tr>
+                    <th>JavaScript</th>
+                    <th>Web Dev</th>
+                    <th>Graphics</th>
+                    <th>Game Dev</th>
+                    <th>Other Programming</th>
+                </tr>
+                <tr>
+                    <td>
+                        Node.js
+                    </td>
+                    <td>
+                        HTML5
+                    </td>
+                    <td>
+                        Photoshop
+                    </td>
+                    <td>
+                        Unity
+                    </td>
+                    <td>
+                        Java
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        React.js
+                    </td>
+                    <td>
+                        CSS
+                    </td>
+                    <td>
+                        Illustrator
+                    </td>
+                    <td>
+                        Godot
+                    </td>
+                    <td>
+                        Python
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Phaser.js
+                    </td>
+                    <td>
+                        Bootstrap
+                    </td>
+                    <td>
+                        GIMP2
+                    </td>
+                    <td>
+                        Unreal
+                    </td>
+                    <td>
+                        C#
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Babylon.js
+                    </td>
+                    <td>
+                        MYSQL
+                    </td>
+                    <td>
+                        After Effects
+                    </td>
+                    <td style="opacity:0;">
+                        
+                    </td>
+                    <td>
+                        GDScript
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Canvas API
+                    </td>
+                    <td>
+                        PHP
+                    </td>
+                    <td>
+                        Figma
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Webpack & Parcel
+                    </td>
+                    <td>
+                        NoSQL (Firebase & MongoDB)
+                    </td>
+                    <td>
+                        Asprite
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Three.js
+                    </td>
+                    <td>
+                        Drupal
+                    </td>
+                    <td>
+                        Blender
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        JQuery
+                    </td>
+                    <td>
+                        Wordpress
+                    </td>
+                    <td>
+                        Inkscape
+                    </td>
+                </tr>
+            </table>
         </section>
         <section class="text">
             <h3>Hobbies</h3>
             <ul>
                 <li>Playing Music</li>
                 <li>Collecting Records</li>
-                <li>video Games</li>
+                <li>Video Games</li>
                 <li>Concerts and Festivals</li>
                 <li>Programming</li>
                 <li>Drawing/Art</li>
